@@ -14,7 +14,6 @@ package org.openhab.binding.mqtt.homeassistant.internal.config;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -63,7 +62,7 @@ public class ListOrStringDeserializer extends TypeAdapter<List<String>> {
                 in.nextNull();
                 return null;
             case STRING:
-                return Collections.singletonList(in.nextString());
+                return List.of(in.nextString());
             case BEGIN_ARRAY:
                 return readList(in);
             default:
